@startuml

title __FRAMEMANAGERS's Class Diagram__\n

  namespace  {
    namespace rameManagers {
      class frameManagers.FrameManager {
          # DELAY_LIMIT : int
          # SIZE : int
          # delay : int
          # down : ArrayList<ImageIcon>
          # forward : boolean
          # index : int
          # left : ArrayList<ImageIcon>
          # right : ArrayList<ImageIcon>
          # up : ArrayList<ImageIcon>
          + FrameManager()
          + getFrameAt()
          + getNextFrame()
      }
    }
  }
  

  namespace  {
    namespace rameManagers {
      class frameManagers.GhostFrameManager {
          # FRIGHTENED_DELAY_LIMIT : int
          # FRIGHTENED_SIZE : int
          # eatenDown : ImageIcon
          # eatenLeft : ImageIcon
          # eatenRight : ImageIcon
          # eatenUp : ImageIcon
          # frightened : ArrayList<ImageIcon>
          # frightenedDelay : int
          # frightenedForward : boolean
          # frightenedIndex : int
          + GhostFrameManager()
          + getNextFrameEaten()
          + getNextFrameFrightened()
      }
    }
  }
  

  namespace  {
    namespace rameManagers {
      class frameManagers.PacmanFrameManager {
          - DEATH_DELAY_LIMIT : int
          - DEATH_SIZE : int
          - death : ArrayList<ImageIcon>
          - deathDelay : int
          - deathIndex : int
          + PacmanFrameManager()
          + getNextFrameDeath()
      }
    }
  }
  

  frameManagers.GhostFrameManager -up-|> frameManagers.FrameManager
  frameManagers.PacmanFrameManager -up-|> frameManagers.FrameManager
  frameManagers.PacmanFrameManager o-- sprites.Pacman : pacman


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
